--- a/css/styles.css
+++ b/css/styles.css
@@ -60,23 +60,23 @@ html {
 .main-menu {
     position: absolute;
     display: none;
-    left: -200px;
-    top: 0;
+    left: -250px;
     height: 100%;
 
     transition: left 0.3s ease;
     z-index: 999;
-}
-.main-menu ul {
-    list-style-type: none;
 
     margin: 0;
-    padding: 2.5em 0 0;
-
-    min-height: 100%;
-    width: 200px;
-
+    padding: 1.5rem 0 1rem 5rem;
     background-color: var(--terracotta-white);
+}
+.main-menu ul {
+    min-height: 100%;
+    width: 250px;
+
+    list-style-type: none;
+
+    margin-top: 5rem;
 }
 .main-menu a {
     text-decoration: none;
@@ -101,8 +101,6 @@ html {
 }
 .main-menu .menu-close {
     position: absolute;
-    /* TODO is it necessary to move nav to right ???? */
-    /*right: 0;*/
     top: 0;
 }
 nav img {
@@ -115,16 +113,17 @@ nav li {
     font-size: var(--font-size);
 }
 aside {
-    padding: 20px;
+    padding-left: 20px;
     display: flex;
     align-items: baseline;
 }
 
 /* Toggle main-menu */
 .main-menu:target {
-    display: block;
     left: 0;
     outline: none;
+
+    display: block;
 }
 
 .main-menu:target .menu-close {
@@ -132,7 +131,7 @@ aside {
 }
 
 .main-menu:target ul {
-    position:relative;
+    /*position: relative;*/
     z-index: 1000;
 }
 
