--- a/css/styles.css
+++ b/css/styles.css
@@ -221,8 +221,10 @@ aside {
 
     visibility: hidden;
 }
-/* first page (with heading and date) */
+/* first page body (shortened because of heading and date) */
 .page-0 {
+    border: 1px solid green;
+
     font-family: var(--nunito), sans-serif;
     /*font-size: var(--font-size);*/
     font-size: 1.2rem;
@@ -244,10 +246,6 @@ aside {
 }
 
 /* ------ new page ------ */
-.overflow-stopper {
-    border: 2px solid red;
-    height: 2rem;
-}
 .blank-page {
     padding: 2rem !important;
 
